# l4llm

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: banner.avif  loss-curve.avif  lstm-closeup.avif  output-showcase.avif  pipeline-diagram.avif  temperature-effect.avif  terminal-output.avif
dataset/: lines.csv
src/l4llm/: __init__.py  cli.py  data.py  generate.py  model.py
