[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l4llm"
version = "2.0.0"
description = "LSTM-based pickup lines generator trained on internet data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["lstm", "text-generation", "keras", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow>=2.16",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.scripts]
l4llm = "l4llm.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["l4llm"]
